# fastapitutorial

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  somebad.yaml  tox.ini
.githooks/: create_dummy  pre-commit
.github/workflows/: pr_test.yaml  unittest.yaml
app/: main.py
assets/: Dockerfile
manifests/: argocd_dummy_trigger.yaml  deployment.yaml  resource_hook_deletion.yaml  service_account.yaml
models/: models.py
scratch/: scratch.py
scripts/: open_coverage_report.sh  run_act.sh  vars_run_act
scripts/events/: act_full_push_payload.json  act_pr_payload.json  push_with_ci_skip.json  push_with_message.json  real_GH_PR_payload.json
src/: alembic.ini
src/app/: app.py  boot_02_load_initial_data.py  boot_backend_pre_start.py  boot_initial_data.py  main.py  prestart.sh
src/app/alembic/: env.py
src/app/alembic/versions/: 2346609ad837_create_user_and_blog_table_migrations.py  44b7e700bbf0_create_user_and_blog_table_migrations.py  c095296de2bf_create_user_and_blog_table_migrations.py
src/app/api/api_v1/: router.py
src/app/api/api_v1/endpoints/: auth.py  route_auth.py  route_recipe.py
src/app/apis/: base.py
src/app/apis/v1/: route_blog.py  route_login.py  route_recipe.py  route_user.py
src/app/clients/: reddit.py
src/app/core/: auth.py  config.py  hashing.py  security.py
src/app/crud/: base.py  crud_recipe.py  crud_user.py
src/app/db/: base.py  base_class.py  init_db.py  session.py
src/app/db/models/: blog.py  recipe.py  user.py
src/app/db/repository/: blog.py  crudbase.py
src/app/dependencies/: dependencies.py
src/app/models/: __init__.py  blog.py  recipe.py  user.py
src/app/schemas/: __init__.py  auth.py  blog.py  http.py  recipe.py  user.py
src/app/templates/: base.py
src/app/tmpholding/: README.md
src/app/tmpholding/apis/v1/: route_blog.py
src/app/tmpholding/schemas/: blog.py
src/app/typeslocal/: types.py
src/boot/: 02_load_initial_data.py
src/migrations/: env.py
src/migrations/versions/: 20241104170552_first_migration.py  20241104185210_first_commit.py  20241105130611_first_commit.py  20241106142843_first_commit.py  53248a88ac5e_made_user_full_name_nullable.py  e36e3fc19535_first_commit.py
src/models/: models.py
src/scripts/: boot_prestart.sh  harmonize_secrets.sh
tests/: __init__.py  conftest.py  pytest.ini  test_app.py  test_recipe.py  test_tutorial.py  test_with_requests.py
tests/test_with_requests/: conftest.py  test_with_requests.py
tests/test_with_testclient/: conftest.py  test_auth.py
tests/utils/: blog.py
