# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = fastapi-tutorial
version = 0.0.1
description = Setting up proper package
author = Graham Wright
readme = README.md
license = { file = "LICENSE" }
platforms = linux, osx, win32

classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11
    Programming Language :: Python :: 3 :: 3.12

keywords = 
    FastAPI,
    Tutorial

[project.urls]
Homepage = "https://github.com/gwright99/fastapitutorial"

[project.scripts]
# annotate = "annotation.annotate:main"

[options]
#packages = find:
packages = 
    app
    models
package_dir =
    =src
install_requires =
    requests>=2.32.0
python_requires = >=3.1
zip_safe = no

