# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = fastapi-tutorial
version = 0.0.1
description = Setting up proper package
author = Graham Wright
readme = README.md
license = { file = "LICENSE" }
platforms = linux, osx, win32

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11
    Programming Language :: Python :: 3 :: 3.12

keywords =
    FastAPI,
    Tutorial

[project.urls]
Homepage = "https://github.com/gwright99/fastapitutorial"

[project.scripts]
# annotate = "annotation.annotate:main"

[options]
#packages = find:
packages =
    app
    models
package_dir =
    =src
install_requires =
    requests>=2.32.0
python_requires = >=3.1
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.3
    pytest-cov>=5.0
    tox>=4.23
    flake8>=7.1.1
    mypy>=1.12

[options.package_data]
# This indicates that a package has been type hinted.
# Requires a 'py.typed' file (blank) to be added into package at same level as __init__.py
app = py.typed

[flake8]
# Annoying: some programs want config in setup.cfg, others in the toml, others in their own / a combination.
# pytest and mypy config goes into toml
max-line-length = 140
exclude = .git, src/app/alembic/version/*, venv/
